@@ -1,3 +1,7 @@
+05/10/2005   Ian Lewis <IanLewis@member.fsf.org>
+
+    * Added syntax highlighting support
+
 04/28/2005   Ian Lewis <IanLewis@member.fsf.org>
 
     * Updated the options panel to conform to the new OptionsPanel interface in
